fixed images looking distorted in 425px

--- a/Styles/responsive.css
+++ b/Styles/responsive.css
@@ -111,10 +111,6 @@
         width: 100%; 
     }
 
-    .product__card img {
-        height: 150px; 
-    }
-
     .Categories__Box h3, .Categories__Box p {
         text-align: center; 
     }
